Minor fix with search icon on smaller screen navbar

--- a/src/modules/Navbar/index.scss
+++ b/src/modules/Navbar/index.scss
@@ -116,6 +116,9 @@ $theme-color: white;
       }
     }
   }
+  .unvisible {
+    display: none;
+  }
 }
 
 .menu-bars {
